# EK-SPL

./: README.md
ball-recognition/: BallDetection.cpp  calibration.py  main  vision .cpp  vision.cpp  vision.py  vision_naoqi.cpp
ball-recognition/.qi/: qibuild.xml  worktree.xml
ball-recognition/BallDetection/: BallDetection.cpp  BallDetection.h
ball-recognition/ball-recognition-module/: BallDetection.cpp  CMakeLists.txt  main.cpp  nao@192.168.11.200  qiproject.xml
ball-recognition/ball-recognition-module/build-cross-atom/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake
goalkeeper/: goalkeeper.cpp  goalkeeper.cpp~  goalkeeper.h
goalkeeper/build-cross-atom/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
libgamectrl/: GameCtrl.cpp  UdpComm.cpp  UdpComm.h
opencvVision/: BallDetection  BallDetection.cpp  CMakeCache.txt  Makefile  cmake_install.cmake
shooter/: qiproject.xml  shooter.cpp
shooter/build-cross-atom/: CMakeCache.txt  Makefile  cmake_install.cmake
vision/: BallDetection.cpp  CMakeLists.txt  vision.cpp  vision.h
vision/build-cross-atom/: CMakeCache.txt  Makefile  cmake_install.cmake
vision/build-sys-linux-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
